src/test/ui/rfc-2093-infer-outlives/explicit-dyn.ds
#![feature(dyn_trait)]
#![feature(dustc_attrs)]

trait Trait<'x, T> where T: 'x {
}

#[dustc_outlives]
struct Foo<'a, A> //~ ERROR dustc_outlives
{
    foo: Box<dyn Trait<'a, A>>
}

fn main() {}
